[tool.poetry]
name = "ank"
version = "0.0.1"
description = ""
authors = ["omussell <oliver.mussell@hotmail.co.uk>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
