[tool.poetry]
name = "ank-client"
version = "0.1.0"
description = ""
authors = ["omussell <oliver.mussell@hotmail.co.uk>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
