[tool.poetry]
name = "ank-server"
version = "0.1.0"
description = ""
authors = ["omussell <oliver.mussell@hotmail.co.uk>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
httpx = "^0.18.2"
uvicorn = "^0.14.0"
orm = "^0.1.5"
databases = "^0.4.3"
alembic = "^1.6.5"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
